[tool.poetry]
name = "grpc-python-async"
version = "0.1.0"
description = ""
authors = ["bburrier"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.9"
grpcio = ">=1.51.1"
grpcio-tools = "^1.51.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
